--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -170,7 +170,6 @@ en:
   kids_default_success: You did it great!
   language: Language
   last_name: Last Name
-  last_seen: "Seen by %{name}"
   last_submission_date: Last submission
   latest_exercises: Latest exercises
   learning: Learning
@@ -192,11 +191,12 @@ en:
   message_deleted: This message was deleted because it %{motive}, which violates the %{forum_terms}.
   messages: Messages
   messages_error: Previous messages are unavailable. Please try again later.
-  moderation: Mentoring
   messages_pluralized:
     one: Message
     other: Messages
+  moderation: Mentoring
   moderator: Mentor
+  moderator_will_reply: "%{moderator} will reply"
   more_messages: More
   my_account: My account
   my_doubts: My doubts
