--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -181,7 +181,6 @@ es:
   language: Lenguaje
   languages: Lenguajes
   last_name: Apellido
-  last_seen: "Visto por %{name}"
   last_submission_date: Última solución
   latest_exercises: Últimos ejercicios
   learning: Aprendizaje
@@ -210,6 +209,7 @@ es:
   minutes: minutos
   moderation: Mentoría
   moderator: Mentor
+  moderator_will_reply: "%{moderator} va a responder"
   more_messages: Ver mensajes anteriores
   my_account: Mi cuenta
   my_doubts: Mis consultas
