--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -354,4 +354,5 @@ pt:
   years: anos
   you_earned: Você ganhou
   you_must_sign_in_before_submitting: Você deve fazer o login antes de começar a enviar suas soluções
+  you_will_reply: Você vai responder
   your_new_organization: sua nova organização
