--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -347,4 +347,5 @@ en:
   you_earned: You earned
   you_must_sign_in_before_submitting: You must sign in before submitting your solutions
   you_never_submitted_solutions: It seems that you've never submitted solutions since you created your account.
+  you_will_reply: You'll reply
   your_new_organization: your new organization
