Show toast when moderator is responsible on a discussion

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -348,4 +348,6 @@ en:
   you_must_sign_in_before_submitting: You must sign in before submitting your solutions
   you_never_submitted_solutions: It seems that you've never submitted solutions since you created your account.
   you_will_reply: You'll reply
+  you_will_reply_notice: You'll reply to this discussion. If you change your mind, click the button again.
+  you_wont_reply_notice: You won't reply to this discussion.
   your_new_organization: your new organization
