--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -362,3 +362,5 @@ es-CL:
   you_must_sign_in_before_submitting: Tienes que iniciar sesión antes de empezar a enviar tus soluciones
   you_never_submitted_solutions: Parece que nunca enviaste soluciones desde que creaste tu cuenta.
   you_will_reply: Vas a responder
+  you_will_reply_notice: Vas a responder a esta consulta. Si cambias de parecer, toca nuevamente el botón.
+  you_wont_reply_notice: No vas a responder a esta consulta.
