--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -379,4 +379,6 @@ es:
   you_must_sign_in_before_submitting: Tenés que iniciar sesión antes de empezar a enviar tus soluciones
   you_never_submitted_solutions: Parece que nunca enviaste soluciones desde que creaste tu cuenta.
   you_will_reply: Vas a responder
+  you_will_reply_notice: Vas a responder a esta consulta. Si cambiás de parecer, tocá nuevamente el botón.
+  you_wont_reply_notice: No vas a responder a esta consulta.
   your_new_organization: tu nueva organización
