--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -355,4 +355,6 @@ pt:
   you_earned: Você ganhou
   you_must_sign_in_before_submitting: Você deve fazer o login antes de começar a enviar suas soluções
   you_will_reply: Você vai responder
+  you_will_reply_notice: Você vai responder a esta consulta. Se mudar de ideia, clique no botão novamente.
+  you_wont_reply_notice: Você não vai responder a esta consulta.
   your_new_organization: sua nova organização
