--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -293,6 +293,7 @@ es-CL:
   solve_more_exercises_to_level_up: Resuelve <span>number</span> ejercicios más para pasar al siguiente nivel.
   solve_your_doubts: Consulta tus dudas
   solve_your_doubts_teaser: ¿Tienes alguna consulta?
+  someone_else_will_reply: Alguien más ya marcó que va a contestar.
   something_went_wrong: ¡Ups!, algo no anduvo bien...
   solved_count:
     one: 1 resuelta
