--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -307,6 +307,7 @@ es:
   solve_more_exercises_to_level_up: Resolvé <span>number</span> ejercicios más para pasar al siguiente nivel.
   solve_your_doubts: Consultá tus dudas
   solve_your_doubts_teaser: ¿Tenés alguna consulta?
+  someone_else_will_reply: Alguien más ya marcó que va a contestar.
   something_went_wrong: ¡Ups!, algo no anduvo bien...
   solved_count:
     one: 1 resuelta
