--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -111,8 +111,8 @@ pt:
   error_500: erro 500
   error_description: Isto é o que é conhecido como <span class = "error-link"> %{error} </ span>.
   errored: Opa! Sua solução não pode ser executada
-  exam_authorization_pending_explanation_html: Você tem tempo até <strong>%{date}</strong> para se inscrever. Após essa data, sua inscrição será avaliada e você receberá uma confirmação. <br> Não se esqueça de verificar as notificações!
-  exam_authorization_request_approved_html: Sua solicitação foi aprovada, não se esqueça de conectar em <strong>%{date}</strong>. Boa sorte!
+  exam_authorization_pending_explanation_html: Você tem tempo até <strong>%{date}</strong> (hora de %{location}) para se inscrever. Após essa data, sua inscrição será avaliada e você receberá uma confirmação. <br> Não se esqueça de verificar as notificações!
+  exam_authorization_request_approved_html: Sua solicitação foi aprovada, não se esqueça de conectar em <strong>%{date}</strong> (hora de %{location}). Boa sorte!
   exam_authorization_request_created: Seu registro de exame foi salvo com sucesso!
   exam_authorization_request_rejected: Sua solicitação foi rejeitada porque você não atendeu aos requisitos.
   exam_authorization_request_saved: Seu registro de exame foi modificado com sucesso!
