--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -115,7 +115,8 @@ en:
   exam_authorization_request_saved: Your registration to the exam has been updated!
   exam_authorization_request_updated: Your registration to %{description} has been updated
   exam_registration_choose_exam: Choose date and time to attend to the exam
-  exam_registration_explanation_html: You have until <strong>%{date}</strong> to register. After that date, your request will be processed and you will receive a confirmation. <br> Don't forget to check the notifications!
+  exam_registration_explanation_html: You have until <strong>%{date}</strong> (%{location} time) to register. After that date, your request will be processed and you will receive a confirmation. <br> Don't forget to check the notifications!
+  exam_registration_finished_html: Registration for this exam ended on <strong>%{date}</strong> (%{location} time)
   exam_registration_open: Registrations open for %{description}!
   exam_registration_to: Registration to %{description}
   exams_will_be_here: Your exams in the organization will appear here.
