--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -124,6 +124,7 @@ es:
   exam_authorization_request_updated: Hay novedades sobre tu inscripción a %{description}
   exam_registration_choose_exam: Seleccioná día y horario en el que te gustaría rendir el exámen
   exam_registration_explanation_html: Tenés tiempo hasta el <strong>%{date}</strong> para inscribirte. Pasada esa fecha, tu solicitud será evaluada y recibirás una confirmación. <br> ¡No te olvides de revisar las notificaciones!
+  exam_registration_finished_html: La inscripción a este examen finalizó el <strong>%{date}</strong> (hora de %{location})
   exam_registration_open: ¡Ya podés inscribirte a %{description}!
   exam_registration_to: Inscripción a %{description}
   exams_will_be_here: Tus exámenes en esta organización aparecerán acá
