--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -229,6 +229,9 @@ es:
   need_help: No entiendo, ¡necesito ayuda!
   never: nunca
   new: Nuevo
+  new_certificate_mailer_title: 'Felicitaciones'
+  new_certificate_mailer_p1: 'Ya está listo tu nuevo certificado'
+  new_certificate_mailer_p2: 'Podés descargarlo desde el adjunto de este mail o bien visualizarlo en tu perfil de Mumuki'
   new_discussion: Nueva consulta
   new_message: ¿Tenés dudas? ¡Levantá la mano!
   new_message_placeholder: Escribí el mensaje para tu docente acá...
