--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -344,6 +344,7 @@ en:
   user: User
   user_data_updated: Your data was updated successfully
   username: Username
+  verified_full_name: Verified name
   view_details: View details
   want_permissions: The following user requires permissions for the organization
   we_miss_you: We miss you!
