--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -371,6 +371,7 @@ es:
   user_data_updated: Tus datos se actualizaron correctamente
   user: Usuario
   username: Nombre de usuario
+  verified_full_name: Nombre verificado
   view_details: Ver detalles
   want_permissions: El siguiente usuario requiere permisos para la organización
   we_miss_you: ¡Te extrañamos!
