--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -357,6 +357,7 @@ es-CL:
   user: Usuario
   username: Nombre de usuario
   verified_full_name: Nombre verificado
+  verified_full_name_notice: Tu nombre verificado fue provisto por %{organization}. Si hay algún error, por favor escribe a %{contact}.
   view_details: Ver detalles
   want_permissions: El siguiente usuario requiere permisos para la organización
   we_miss_you: ¡Te extrañamos!
