--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -133,7 +133,8 @@ en:
   expected_state: Expected board
   explain_redirect: You have registered in another organization
   failed: Oops, something went wrong
-  faqs: FAQs
+  faqs: Frequently Asked Questions
+  faqs_abbreviated: FAQs
   feedback: Feedback
   female: Female
   file_exceeds_max_size: "File size should not exceed %{size_kb}kb. Please select another file."
