Reorder and update a few locales

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -322,7 +322,7 @@ en:
   terms_and_conditions_continue_disclaimer: By continuing you agree to %{terms_link}
   terms_and_conditions_must_be_accepted: You must accept the terms and conditions
   test_results: Test results
-  time_ago: "%{time} ago"
+  time_since: "%{time} ago"
   time_left: You have
   title: Title
   to_closed: Close
