--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -21,6 +21,7 @@ en:
   ask_community: Ask community for help
   ask_redirect: Do you want to go there?
   ask_the_first_question: Be the first one to ask!
+  asked_time_since: asked %{time} ago
   attempts_left:
     zero: "You've run out of attempts"
     one: "1 attempt remaining"
