--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -84,6 +84,7 @@ en:
   destroy_message: delete the message
   disabled_explanation: You are trying to visit a permamently disabled or deleted resource
   disabled_organization_explanation: This path has already finished.
+  discussion_created_by: Created by
   discussion_description_placeholder: You can add more information regarding your doubt.
   new_discussion_message: New message on %{title}
   discussion_updated: Discussion updated
@@ -170,6 +171,7 @@ en:
   keep_learning: Keep learning!
   kids_default_success: You did it great!
   language: Language
+  last_message: Last message
   last_name: Last Name
   last_submission_date: Last submission
   latest_exercises: Latest exercises
