--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -91,6 +91,8 @@ es-CL:
   discussion_created_by: Creada por
   discussion_updated: Consulta actualizada
   discussions: Consultas
+  discussions_read: Leídas
+  discussions_unread: No leídas
   discussions_will_be_here: Las preguntas que realices en el espacio de consultas aparecerán aquí.
   dont_leave_us: ¡No nos abandones! Aprender a programar es divertido. Sólo tienes que seguir practicando.
   download: "Descarga lo que hiciste"
@@ -273,7 +275,6 @@ es-CL:
   profile_of: Perfil de %{username}
   progress: Progreso
   publish_discussion: Publicar consulta
-  read: Leído
   read_messages: Ver mensajes
   refresh_or_wait: Si no se muestra automáticamente en unos segundos, presiona F5
   reply_count:
