Make some locales gender-neutral

--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -11,11 +11,11 @@ es-CL:
   and: y
   appendix: Apéndice
   appendix_teaser: ¿Quieres saber más? <a href="%{link}">Consulta el apéndice de este capítulo</a>
-  approved_message: Validado por mentor
+  approved_message: Validado por mentorías
   approved_messages:
     one: validado
     other: validados
-  are_you_sure: '¿Estás seguro que quieres %{action}?'
+  are_you_sure: '¿Confirmas que quieres %{action}?'
   ask_a_question: ¡Haz una pregunta!
   ask_community: Pregunta a la comunidad
   ask_redirect: ¿Quieres que te llevemos ahí?
