--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -172,6 +172,7 @@ es:
   home: Inicio
   hour: hora
   hours: horas
+  i_want_emails_of: Quiero recibir emails de
   important_info: Información importante
   initial_state: Tablero inicial
   insert_file_name: Ingresa un nombre de archivo
@@ -201,6 +202,8 @@ es:
   load_solution_into_console: Cargar la solución en la consola
   locked_content: 'Este contenido se desbloqueará cuando termines los capítulos anteriores'
   male: Hombre
+  manage_notification_subscriptions: Administrá tus notificaciones
+  manage_notifications: Administrar notificaciones
   manual_evaluation_pending: ¡Gracias por enviar tu solución! Tus docentes la corregirán pronto
   medal: Medalla
   message: Mensaje
@@ -224,6 +227,7 @@ es:
     you_wont_confirmation: No te vas a ocupar de esta consulta.
   my_account: Mi cuenta
   my_doubts: Mis consultas
+  my_notifications: Mis notificaciones
   my_profile: Mi perfil
   name: Nombre
   navigation_continue: 'Siguiente %{kind}: %{sibling}'
@@ -253,7 +257,12 @@ es:
   not_found: ¡La página que buscaste no existe!
   not_found_explanation: Fijate si escribiste bien la dirección.
   not_in_any_organizations: ¡Parece que no estás en ninguna organización todavía!
+  notification_subject:
+    custom: Anuncios generales
+    exam_authorization_request_updated: Cambios sobre inscripciones a exámenes
+    exam_registration: Inscripciones a exámenes habilitadas
   notifications: Notificaciones
+  notifications_will_be_here: Tus notificaciones aparecerán aquí
   notify_problem_with_exercise: Reportá un bug
   office: Secretaría
   only_landscape_support: Por favor, rotá tu tablet o celular para realizar ejercicios
@@ -276,6 +285,7 @@ es:
   permissions: Permisos
   please_fill_profile_data: ¡Completá tus datos personales para continuar!
   please_validate: 'Estás a punto de ingresar al curso. Para poder ofrecerte una mejor experiencia, por favor validá que tus datos a continuación sean reales y correctos.'
+  preferences_updated_successfully: Tus preferencias se actualizaron correctamente
   preview: Vista previa
   preview_error: No se puede mostrar la vista previa. Revisá tu conexión a internet o probá con un mensaje más corto.
   previous_exercise: Anterior
@@ -392,6 +402,7 @@ es:
   wrong_answer: La respuesta no es correcta
   years: años
   you_earned: Ganaste
+  you_have_a_new_notification: ¡Tenés una nueva notificación!
   you_must_sign_in_before_submitting: Tenés que iniciar sesión antes de empezar a enviar tus soluciones
   you_never_submitted_solutions: Parece que nunca enviaste soluciones desde que creaste tu cuenta.
   your_new_organization: tu nueva organización
