--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -167,6 +167,7 @@ pt:
   home: Home
   hour: hora
   hours: horas
+  i_want_emails_of: Quero receber e-mails de
   important_info: Informação importante
   initial_state: Tabuleiro inicial
   insert_file_name: Insira um nome de arquivo
@@ -194,6 +195,8 @@ pt:
   load_solution_into_console: Carregue a solução no console
   locked_content: 'Este conteúdo será desbloqueado quando você terminar os capítulos anteriores'
   male: Masculino
+  manage_notification_subscriptions: Gerenciar suas notificações
+  manage_notifications: Gerenciar notificações
   manual_evaluation_pending: Obrigado por enviar sua solução! Seus professores irão corrigi-lo em breve
   medal: Medalha
   message: Mensagem
@@ -218,6 +221,7 @@ pt:
     you_wont_confirmation: Você não vai cuidar dessa consulta.
   my_account: Minha conta
   my_doubts: Minhas duvidas
+  my_notifications: Minhas notificações
   my_profile: Meu perfil
   name: Nome
   navigation_continue: "Próximo %{kind}: %{sibling}"
@@ -246,7 +250,12 @@ pt:
   not_found: A página que você pesquisou não existe!
   not_found_explanation: Olhe se você escreveu o endereço corretamente.
   not_in_any_organizations: Parece que você ainda não está em nenhuma organização!
+  notification_subject:
+    custom: Anúncios gerais
+    exam_authorization_request_updated: Mudanças no registro do exame
+    exam_registration: Inscrição para exames qualificados
   notifications: Notificações
+  notifications_will_be_here: Suas notificações aparecerão aqui
   notify_problem_with_exercise: Relatar um erro
   office: Secretariado
   only_landscape_support: Por favor, gire seu tablet ou celular para realizar exercícios
@@ -267,6 +276,7 @@ pt:
   permissions: Permissões
   please_fill_profile_data: Preencha suas informações pessoais para continuar!
   please_validate: Você está prestes a entrar no curso. Para oferecer uma experiência melhor, valide que seus dados abaixo sejam reais e corretos.
+  preferences_updated_successfully: Suas preferências foram atualizadas com sucesso
   preview: Vista prévia
   preview_error: A visualizaçao não pode ser mostrada. Verifique sua conexão com a internet ou tente com uma mensagem mais curta.
   previous_exercise: Anterior
@@ -369,5 +379,6 @@ pt:
   wrong_answer: A resposta não é correta
   years: anos
   you_earned: Você ganhou
+  you_have_a_new_notification: Você tem uma nova notificação!
   you_must_sign_in_before_submitting: Você deve fazer o login antes de começar a enviar suas soluções
   your_new_organization: sua nova organização
