--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -37,6 +37,8 @@ en:
   cancel: Cancel
   cancel_subscription: Cancel your subscription.
   certificate: Certificate
+  certificate_available: Your certificate is available!
+  certificate_download: You can find it attached to this email or in your Mumuki profile
   certificates: Certificates
   certificates_will_be_here: Your certificates in the organization will appear here.
   certificate_verified_legend: "<strong>%{full_name}</strong>'s account is verified. Mumuki certifies their successful completion of <strong>%{description}</strong>."
@@ -56,6 +58,7 @@ en:
   confirm: Confirm
   confirm_reset: You are about to restart your exercise. Do you want to proceed?
   confirm_restart: You are about to delete your progress for this guide. Do you want to proceed?
+  congratulations: Congratulations!
   console: Console
   contact_administrator: 'If you think this is not supposed to happen, please contact %{link}'
   content: Content
@@ -190,6 +193,25 @@ en:
   loading: Loading
   load_solution_into_console: Load your solution into the console
   locked_content: 'This content will be unlocked when you finish previous chapters'
+  mailer:
+    title:
+      exam_authorization_request_updated: There are updates in your exam registration
+      exam_authorization_request_rejected: Exam registration rejected
+      exam_registration: Exam registrations open
+      custom: You have a new notification!
+    subtitle:
+      exam_authorization_request_approved: Your registration request to the exam has been approved.
+      exam_authorization_request_rejected: Your registration request to the exam has been rejected because the requirements weren't met.
+      exam_registration: ¡You can register for the exam!
+    text:
+      exam_authorization_request_approved: You can sit for the exam on %{exam_start_date} by going into the platform. ¡Good luck!
+      exam_authorization_request_rejected: ¡Don't be upset! You did a great job and we hope you'll keep learning programming.
+      exam_registration: You have until %{exam_registration_deadline} to sign up. In order to be approved, you must meet the requirements.
+    button:
+      exam_registration: Sign up for the exam
+      exam_authorization_request_approved: Go to the platform
+      exam_authorization_request_rejected: My exams
+      custom: My notifications
   male: Male
   manage_notification_subscriptions: Manage your notification subscriptions
   manage_notifications: Manage notifications
