--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -37,6 +37,8 @@ pt:
   blocked_forum_explanation: Você está no meio de um exame agora?
   cancel: Cancelar
   certificate: Certificado
+  certificate_available: Seu certificado já está disponível
+  certificate_download: Baixe-o do anexo deste e-mail ou visualize-o em seu perfil Mumuki.
   certificates: Certificados
   certificates_will_be_here: Seus certificados nesta organização aparecerão aqui
   certificate_verified_legend: "A conta de <strong>% {full_name} </strong> foi verificada. Mumuki certifica a conclusão com sucesso de <strong>% {description} </strong>."
@@ -54,6 +56,7 @@ pt:
   confirm: Confirme
   confirm_reset: Você está prestes a reiniciar seu exercício. Você quer continuar?
   confirm_restart: Você está prestes a apagar o seu progresso neste guia. Você quer continuar?
+  congratulations: Parabéns!
   console: Consola
   contact_administrator: Se você acha que é um erro, entre em contato com %{link}
   content: Conteúdo
@@ -194,6 +197,25 @@ pt:
   loading: Carregando
   load_solution_into_console: Carregue a solução no console
   locked_content: 'Este conteúdo será desbloqueado quando você terminar os capítulos anteriores'
+  mailer:
+    title:
+      exam_authorization_request_updated: Você tem alterações no registro do seu exame
+      exam_authorization_request_rejected: Inscrição rejeitada
+      exam_registration: Abertura de inscrições
+      custom: Você tem uma nova notificação!
+    subtitle:
+      exam_authorization_request_approved: Seu pedido de inscrição para o exame foi aprovado.
+      exam_authorization_request_rejected: Sua inscrição para o exame foi rejeitada porque os requisitos não foram atendidos.
+      exam_registration: Agora você pode se inscrever para o exame!
+    text:
+      exam_authorization_request_approved: Você poderá fazer o exame em %{exam_start_date} ao entrar na plataforma. Êxitos!
+      exam_authorization_request_rejected: Não te desanimes! Você fez um grande esforço e esperamos que continue aprendendo programação.
+      exam_registration: Você tem tempo para se registrar até o exam_registration_deadline. Para que seu registro seja aceito, você deve atender aos requisitos.
+    button:
+      exam_registration: Assinar o exame
+      exam_authorization_request_approved: Vá para a plataforma
+      exam_authorization_request_rejected: Meus exames
+      custom: Minhas notificações
   male: Masculino
   manage_notification_subscriptions: Gerenciar suas notificações
   manage_notifications: Gerenciar notificações
