Add limit 10 to notifications dropdown

--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -327,6 +327,7 @@ es-CL:
   retry_exercise: Reintentar
   running: procesando
   save: Guardar
+  see_all_notifications: "Ver todas las notificaciones"
   see_context: Mira la animación del principio
   select_file: Seleccionar archivo
   send: Enviar
