--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -357,6 +357,7 @@ es:
   retry_exercise: Reintentar
   running: procesando
   save: Guardar
+  see_all_notifications: "Ver todas las notificaciones"
   see_context: Mirá la animación del principio
   select_file: Seleccionar archivo
   send: Enviar
